# tauri-plugin-matrix-svelte

./: .gitignore  .prettierignore  Cargo.toml  LICENSE_APACHE-2.0  README.md  build.rs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.ts
android/: build.gradle.kts  google-services.json
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt  NotificationHandler.kt  PushNotificationPlugin.kt  Service.kt
android/src/test/java/: ExampleUnitTest.kt
example/matrix-svelte-client/: .gitignore  .prettierignore  README.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
example/matrix-svelte-client/.cargo/: config.toml
example/matrix-svelte-client/messages/: en.json  fr.json
example/matrix-svelte-client/src/: app.css  app.html  hooks.client.ts
example/matrix-svelte-client/src-tauri/: Cargo.toml  Entitlements.plist  Info.ios.plist  tauri.android.conf.json  tauri.conf.json
example/matrix-svelte-client/src-tauri/capabilities/: default.json  ios.json  mobile.json
example/matrix-svelte-client/src-tauri/src/: android_push.rs  lib.rs  logging.rs  main.rs
example/matrix-svelte-client/src/lib/: login-state.svelte.ts  media-cache.ts  notifications.ts  snippets.svelte  utils.svelte.ts  utils.ts
example/matrix-svelte-client/src/lib/schemas/: login.ts  matrix-id.ts
example/matrix-svelte-client/src/lib/stores/: rooms.map.svelte.ts
example/matrix-svelte-client/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
example/matrix-svelte-client/src/routes/bookmarks/: +page.svelte
example/matrix-svelte-client/src/routes/devices/: +page.svelte  +page.ts  device-actions.svelte  device-item.svelte
example/matrix-svelte-client/src/routes/login/: +page.svelte  +page.ts
example/matrix-svelte-client/static/: splash.css
guest-js/: index.ts  media-cache.svelte.ts  media-cache.ts  tauri-events.ts  types.ts
guest-js/lib/: index.ts  media-cache.svelte.ts  tauri-events.ts  type-guards.ts  types.ts  utils.ts
guest-js/lib/bindings/: AttachementInfo.ts  AudioInfo.ts  AudioMessageEventContent.ts  BaseAudioInfo.ts  BaseFileInfo.ts  BaseImageInfo.ts  BaseVideoInfo.ts  DeviceGuessedType.ts  EditRoomInformationPayload.ts  EditUserInformationPayload.ts  EmoteMessageEventContent.ts  EncryptedFile.ts  FileInfo.ts  FileMessageEventContent.ts  FormattedBody.ts  FrontendDevice.ts  FrontendRoomMember.ts  FrontendTextMessage.ts  ImageInfo.ts  ImageMessageEventContent.ts  InReplyTo.ts  IndexedBookmark.ts  InviteState.ts  InvitedRoomInfo.ts  InviterInfo.ts  JoinRuleSummary.ts  JoinedRoomInfo.ts  JsonWebKey.ts  LocationMessageEventContent.ts  LoginState.ts  MatrixBookmarkItem.ts  MatrixLoginPayload.ts  MatrixUriIntent.ts  MatrixUriPillInfo.ts  MediaSource.ts  Mentions.ts  MessageFormat.ts  MilliSecondsSinceUnixEpoch.ts  MsgLikeContent.ts  NoticeMessageEventContent.ts  (+41 more)
guest-js/lib/matrix-requests/: common.ts  media.ts  message-text.ts  requests.ts
guest-js/lib/notifications/: ios-notifications.ts
guest-js/lib/stores/: login-store.svelte.ts  profiles-store.svelte.ts  room-store.svelte.ts  rooms-collection.svelte.ts
guest-js/lib/timeline-items/: message-kinds.ts  message-like.ts  state-event.ts  timeline-item.ts
guest-js/matrix-requests/: common.ts  media.ts  message-text.ts  requests.ts
guest-js/stores/: login-store.svelte.ts  profiles-store.svelte.ts  room-store.svelte.ts  rooms-collection.svelte.ts
guest-js/timeline-items/: message-kinds.ts  message-like.ts  timeline-item.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift  NotificationPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
patches/: sveltekit-superforms@2.27.1.patch
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: android_share_matrix_media.toml  await_paginate_timeline.toml  build_client_from_homeserver_url.toml  check_device_verification.toml  check_homeserver_auth_type.toml  check_if_last_device.toml  define_room_informations.toml  disconnect_and_clear_session.toml  edit_user_information.toml  fetch_matrix_pill_info.toml  fetch_media.toml  fetch_user_profile.toml  filter_room_list.toml  forward_oauth_login_deeplink.toml  get_dm_room_from_user_id.toml  get_dm_room_id_or_create_it.toml  get_event_from_main_timeline.toml  get_matrix_to_permalink_for_room.toml  handle_matrix_uri_command.toml  has_backup_setup.toml  has_session_stored.toml  is_logged_in.toml  login_and_create_new_session.toml  register_notifications.toml  reset_cross_signing.toml  restore_backup_with_passphrase.toml  search_bookmarks.toml  search_bookmarks_globally.toml  search_bookmarks_in_room.toml  search_users.toml  send_media_message.toml  setup_new_backup.toml  silent_save_matrix_media_to_cache_dir.toml  submit_async_request.toml  submit_matrix_login_request.toml  try_get_room_preview_from_address.toml  upload_media.toml  verify_device.toml  write_media_to_selected_folder.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  events.rs  lib.rs  mobile.rs  state_updaters.rs
src/keychain/: mod.rs
src/keyring/: mod.rs
src/matrix/: emoji_verification.rs  event_preview.rs  events.rs  invited_room.rs  login.rs  media_cache.rs  mod.rs  notifications.rs  requests.rs  rooms.rs  session.rs  singletons.rs  sync.rs  timeline.rs  user_power_level.rs  user_profile.rs  utils.rs  workers.rs
src/matrix/room/: mod.rs  room_filter.rs  room_screen.rs  rooms_list.rs
src/matrix/room/frontend_events/: events_dto.rs  mod.rs  msg_like.rs  state_event.rs  virtual_event.rs
src/matrix/room/message/: message_details.rs  mod.rs
src/matrix/stores/: login_store.rs  mod.rs  room_store.rs  rooms_collection.rs
src/models/: matrix.rs  matrix_requests.rs  mobile.rs  mod.rs  notifications.rs
src/stronghold/: builder.rs  client.rs  error.rs  mod.rs  store.rs  utils.rs
src/utils/: config.rs  fs.rs  mod.rs
(+199 files in other folders)
