[package]
name = "tauri-plugin-matrix-svelte"
version = "0.2.0"
authors = ["IT-ess"]
description = "A Tauri plugin that exposes high level Matrix data through Svelte Rune stores"
edition = "2024"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-matrix-svelte"
keywords = ["matrix", "svelte", "tauri", "plugin", "chat"]
repository = "https://github.com/IT-ess/tauri-plugin-matrix-svelte"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
tauri = { version = "2.8.5" }
serde = "1.0"
thiserror = "2"
anyhow = "1.0.98"
tracing-subscriber = "0.3.19"
serde_json = "1.0.142"
futures = "0.3.31"
futures-util = "0.3.31"
tauri-plugin-svelte = "2.6.1"
tauri-plugin-notification = "2.3.1"
matrix-ui-serializable = { git = "https://github.com/IT-ess/matrix-ui-serializable" }
tauri-plugin-keyring = { git = "https://github.com/IT-ess/tauri-plugin-keyring" }

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
