[package]
name = "tauri-plugin-matrix-svelte"
version = "0.3.0"
authors = ["IT-ess"]
description = "A Tauri plugin that exposes high level Matrix data through Svelte Rune stores"
edition = "2024"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-matrix-svelte"
keywords = ["matrix", "svelte", "tauri", "plugin", "chat"]
repository = "https://github.com/IT-ess/tauri-plugin-matrix-svelte"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
tauri = "2.10.3"
serde = "1.0"
serde_json = "1.0.142"
base64 = "0.22.1"
async-trait = "0.1.89"
thiserror = "2"
anyhow = "1.0.102"
keyring-core = "1.0.0"
tracing-subscriber = "0.3.19"
rand = "0.9.2"
url = "2.5.7"
mime_serde_shim = "0.2"
futures = "0.3.31"
futures-util = "0.3.31"
tauri-plugin-android-fs = { version = "28.1.0", default-features = false }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-svelte = { version = "3.2.0", features = ["marshaler-cbor"] }
tauri-plugin-notifications = { version = "0.4.5", features = ["push-notifications"] }
tracing = "0.1.43"
infer = { version = "0.19", default-features = false }
# matrix-ui-serializable = { git = "https://github.com/IT-ess/matrix-ui-serializable" }
matrix-ui-serializable = { path = "../matrix-ui-serializable" }

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["protected"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[target."cfg(any(target_os = \"windows\"))".dependencies]
windows-native-keyring-store = "1.0.0"

[target."cfg(any(target_os = \"android\"))".dependencies]
android-native-keyring-store = "1.0.0"
