[package]
name = "matrix-svelte-client"
version = "0.1.0"
description = "A Matrix client using tauri-plugin-matrix-svelte"
authors = ["IT-ess"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "matrix_svelte_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.4", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-matrix-svelte = { path = "../../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-os = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = "2"
tauri-plugin-svelte = "2.6.1"
tauri-plugin-notification = "2.3.1"

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-sharesheet = { git = "https://github.com/buildyourwebapp/tauri-plugin-sharesheet" }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
