[package]
name = "matrix-svelte-client"
version = "0.1.0"
description = "A Matrix client using tauri-plugin-matrix-svelte"
authors = ["IT-ess"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "matrix_svelte_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = ["tray-icon"] }
tauri-plugin-matrix-svelte = { path = "../../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-notifications = { version = "0.4.2", features = ["push-notifications"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-persisted-scope = "2.3.5"
tauri-plugin-safe-area-insets-css = "0.2.0"
tauri-plugin-svelte = "3.1.0"
tauri-plugin-single-instance = { version = "2.3.7", features = ["deep-link"] }
tauri-plugin-web-auth = "1.0.0"
tauri-plugin-devtools = "2.0.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
