[package]
name = "matrix-svelte-client"
version = "0.4.0"
description = "A Matrix client using tauri-plugin-matrix-svelte"
authors = ["IT-ess"]
edition = "2024"
rust-version = "1.96"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "matrix_svelte_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
anyhow = "1.0.102"
rustls-platform-verifier = "0.6"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-matrix-svelte = { path = "../../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_serde_shim = "0.2"
ndk-context = "0.1.1"
serde_urlencoded = "0.7.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-fs = "2.5.1"
tauri-plugin-notifications = { path = "../../../../tauri-plugin-notifications", features = ["push-notifications"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-persisted-scope = "2.3.7"
tauri-plugin-safe-area-insets-css = "0.2.0"
tauri-plugin-svelte = { version = "3.2.0", features = ["marshaler-cbor"] }
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
tauri-plugin-web-auth = "1.0.0"
tauri-plugin-devtools = "2.0.0"
time = "0.3.44"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["time", "env-filter"] }

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-sharekit = { version = "0.3.1", default-features = false }

[target."cfg(target_os = \"android\")".dependencies]
jni = "0.21.1"
tokio = "1.52.1"
base64 = "0.22"
tauri-plugin-android-fs = { version = "28.1.0", default-features = false }
# Routes the cold-path (killed-state) silent-push `tracing` output to logcat,
# since the Tauri runtime's logging setup never runs in that path.
paranoid-android = "0.2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
